fix nav behind gallery

--- a/06/css/styles.css
+++ b/06/css/styles.css
@@ -433,6 +433,8 @@ main {
 }
 
 main div.performers {
+  position: relative;
+  z-index: -1;
   display: flex;
   flex-direction: column;
 }
