--- a/06/sass/_small.scss
+++ b/06/sass/_small.scss
@@ -107,6 +107,8 @@ main {
   padding: 1rem 2% 0 2%;
 }
 main div.performers {
+  position: relative;
+  z-index: -1;
   display: flex;
   flex-direction: column;
   figure {
